# lwar-rust

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md  build.rs
.cargo/: config.toml
assets/shaders/: sprite.ps.hlsl  sprite.vs.hlsl
src/: lib.rs  main.rs  platform.rs  primitives.rs
src/platform/: alloc.rs  com_ptr.rs  error.rs  graphics.rs  input.rs  mod.rs  process.rs  win_str.rs  window.rs
src/platform/graphics/: com_ptr.rs  graphics_device.rs  render_target.rs  shader.rs  state.rs  swap_chain.rs
src/primitives/: color.rs
