[package]
authors = ["Axel Habermaier <axelhabermaier@gmail.com>"]
edition = "2018"
name = "orbs"
version = "0.1.0"

[dependencies]
winapi = {version = "0.3", features = [
  "d3d11",
  "errhandlingapi",
  "impl-default",
  "winbase",
  "wincon",
  "winuser",
]}

[profile.dev]
panic = "abort"

[profile.release]
lto = true
panic = "abort"
