[package]
authors = ["Axel Habermaier <axelhabermaier@gmail.com>"]
edition = "2018"
name = "orbs"
version = "0.1.0"

[dependencies]
winapi = {version = "0.3", features = [
  "d3d11",
  "dxgi1_5",
  "dxgidebug",
  "errhandlingapi",
  "impl-default",
  "winbase",
  "wincon",
  "winerror",
  "winuser",
]}

[profile.dev]
panic = "abort"

[profile.release]
lto = true
panic = "abort"
