[package]
authors = ["Axel Habermaier <axelhabermaier@gmail.com>"]
edition = "2021"
name = "lwar"
version = "0.1.0"

[dependencies]
num_enum = { version = "0.5.7" }
winapi = { version = "0.3.9", features = [
  "d3d11",
  "dxgi1_5",
  "dxgidebug",
  "errhandlingapi",
  "impl-default",
  "winbase",
  "wincon",
  "winerror",
  "winuser",
] }

[build-dependencies]
winapi = { version = "0.3.9", features = [
  "d3dcompiler",
  "errhandlingapi",
  "winbase",
  "winerror",
] }

[profile.dev]
panic = "abort"

[profile.release]
lto = true
panic = "abort"
